Update Swagger documentation for six GET routes
