# server/src/routes/index.ts
@@ -13,8 +13,6 @@ router.post('/login', c.login)
 router.post('/register', c.register)
 router.get('/api-key', c.keyForm)
 router.post('/api-key', c.generateKey)
-
-router.get('/movies', c.getAllMovies);
 router.get('/movies/search/financial', c.getMoviesByFinancial);
 router.get('/movies/search/multi', c.getMoviesByMultiFilter);
 router.get('/movies/studio/search', c.getMoviesByStudio);
